Rename modules, and upgrade to latest ea cmd line flags