@@ -1,14 +1,14 @@
 ./build.sh
 rm -rf mods-test
 
-javac -Xmodule:javamodularity.easytext.algorithm.naivesyllablecounter \
-      -XaddReads:javamodularity.easytext.algorithm.naivesyllablecounter=org.junit \
-      -mp mods:lib-test \
-      -d mods-test/javamodularity.easytext.algorithm.naivesyllablecounter $(find src-test -name '*.java')
+javac -Xmodule:easytext.algorithm.naivesyllablecounter \
+      --add-reads easytext.algorithm.naivesyllablecounter=org.junit \
+      --module-path mods:lib-test \
+      -d mods-test/easytext.algorithm.naivesyllablecounter $(find src-test -name '*.java')
 
-java -Xpatch:mods-test \
-     -XaddReads:javamodularity.easytext.algorithm.naivesyllablecounter=org.junit \
-     -XaddExports:javamodularity.easytext.algorithm.naivesyllablecounter/javamodularity.easytext.algorithm.naivesyllablecounter=org.junit \
-     -mp mods:lib-test \
-     -addmods javamodularity.easytext.algorithm.naivesyllablecounter,hamcrest.core \
+java --patch-module easytext.algorithm.naivesyllablecounter=mods-test \
+     --add-reads easytext.algorithm.naivesyllablecounter=org.junit \
+     --add-exports easytext.algorithm.naivesyllablecounter/javamodularity.easytext.algorithm.naivesyllablecounter=org.junit \
+     --module-path mods:lib-test \
+     --add-modules easytext.algorithm.naivesyllablecounter,hamcrest.core \
      -m org.junit/org.junit.runner.JUnitCore javamodularity.easytext.algorithm.naivesyllablecounter.NaiveSyllableCounterTest
